--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "module": "commonjs",
     "target": "es2020",
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "exclude": [
     "node_modules"
