--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend core for Unispaces",
   "scripts": {
     "dev": "ts-node-dev --respawn App/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@types/pg": "^8.6.1",
@@ -15,11 +15,17 @@
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "babel-jest": "^27.3.1",
     "eslint": "^8.3.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "ts-node-dev": "^1.1.8",
