* added some tests; * new eslint rules; * more goodies;

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,9 @@
   "rules": {
     "@typescript-eslint/semi": [
       "error"
+    ],
+    "@typescript-eslint/ban-ts-comment": [
+      0
     ]
   }
 }
