--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend core for Unispaces",
   "scripts": {
     "dev": "ts-node-dev --respawn App/index.ts",
-    "test": "jest"
+    "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
     "@types/pg": "^8.6.1",
