--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/pg": "^8.6.1",
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0"
   },
