* added user mock data; * renamed Client getter to client... to not confuse with the Client constructor from pg; * added a new test for user register using mock data; * fixed a few files and added some comments;

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,10 +11,13 @@
   ],
   "rules": {
     "@typescript-eslint/semi": [
-      "error"
+      2
     ],
     "@typescript-eslint/ban-ts-comment": [
       0
+    ],
+    "@typescript-eslint/no-empty-function": [
+      1
     ]
   }
 }
