--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,17 @@
 {
-  "trailingComma": "es5",
-  "semi": true,
-  "tabWidth": 2,
+  "arrowParens": "always",
+  "bracketSameLine": false,
   "bracketSpacing": true,
-  "singleQuote": true
+  "embeddedLanguageFormatting": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "printWidth": 100,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": false
 }
