--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "description": "Backend core for Unispaces",
   "scripts": {
-    "dev": "ts-node-dev --respawn App/index.ts",
+    "dev": "ts-node-dev --respawn ./App/index.ts",
     "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
     "@types/pg": "^8.6.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "ts-node": "^10.4.0"
   },
