--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
