--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.3",
+    "@types/node-dir": "^0.0.34",
     "@types/pg": "^8.6.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-dir": "^0.1.17",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0"
