--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,26 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2020",
+    "target": "ESNext",
+    "moduleResolution": "node",
+//    "esModuleInterop": true,
+    "allowJs": true,
     "sourceMap": true,
     "strict": true,
+    "outDir": "./dist",
+    "sourceRoot": "./App",
+    "baseUrl": "./App",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist/**/*",
+    "Test"
+  ],
+  "include": [
+    "App/index.ts"
   ]
 }
