--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend core for Unispaces",
   "scripts": {
     "start": "node ./dist/index.js",
-    "dev": "ts-node-dev --respawn ./App/index.ts",
+    "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./App/index.ts",
     "build": "tsc --build --clean && tsc --build",
     "test": "jest --watchAll --detectOpenHandles"
   },
@@ -41,6 +41,7 @@
     "prettier": "^2.5.0",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2"
   },
   "repository": {
