--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "target": "ESNext",
     "moduleResolution": "node",
-//    "esModuleInterop": true,
+    //    "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
     "strict": true,
@@ -13,14 +13,15 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@Requests": ["./Core/Routing"],
+      "@Decorators": ["./Core/Decorators"],
+      "@Services/*": ["./Services/*"],
+      "@Models": ["./Models"],
+      "@Interfaces": ["./Interfaces"]
+    }
   },
-  "exclude": [
-    "node_modules",
-    "dist/**/*",
-    "Test"
-  ],
-  "include": [
-    "App/index.ts"
-  ]
+  "exclude": ["node_modules", "dist/**/*", "Test"],
+  "include": ["App/index.ts"]
 }
