--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./dist/index.js",
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./App/index.ts",
     "build": "tsc --build --clean && tsc --build",
-    "test": "jest --watchAll --detectOpenHandles"
+    "test": "jest --watchAll --detectOpenHandles",
+    "prod": "ts-node -r tsconfig-paths/register ./App/index.ts"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
