--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Backend core for Unispaces",
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/index.js",
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./App/index.ts",
     "build": "tsc --build --clean && tsc --build",
     "test": "jest --watchAll --detectOpenHandles",
