--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "Backend core for Unispaces",
   "scripts": {
-    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/index.js",
-    "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./App/index.ts",
-    "build": "tsc --build --clean && tsc --build",
-    "test": "jest --watchAll --detectOpenHandles",
-    "prod": "ts-node -r tsconfig-paths/register ./App/index.ts"
+    "start": "node ./dist/index.js",
+    "dev": "ts-node-dev --respawn ./App/index.ts",
+    "build": "tsc -b --clean && tsc -p tsconfig.json",
+    "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -21,7 +20,6 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "node-dir": "^0.1.17",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0"
