--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "ESNext",
+    "target": "es6",
     "moduleResolution": "node",
-    //    "esModuleInterop": true,
+//    "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
     "strict": true,
@@ -15,13 +15,14 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "paths": {
-      "@Requests": ["./Core/Routing"],
-      "@Decorators": ["./Core/Decorators"],
-      "@Services/*": ["./Services/*"],
-      "@Models": ["./Models"],
-      "@Interfaces": ["./Interfaces"]
     }
   },
-  "exclude": ["node_modules", "dist/**/*", "Test"],
-  "include": ["App/index.ts"]
+  "exclude": [
+    "node_modules",
+    "dist/**/*",
+    "Test"
+  ],
+  "include": [
+    "App/index.ts"
+  ]
 }
