--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
     "moduleResolution": "node",
 //    "esModuleInterop": true,
     "allowJs": true,
-    "sourceMap": true,
+//    "sourceMap": true,
     "strict": true,
     "outDir": "./dist",
-    "sourceRoot": "./App",
+//    "sourceRoot": "./App",
     "baseUrl": "./App",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
@@ -23,6 +23,6 @@
     "Test"
   ],
   "include": [
-    "App/index.ts"
+    "App/**/*",
   ]
 }
