--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node-dir": "^0.0.34",
     "@types/pg": "^8.6.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@types/cors": "^2.8.12",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@types/express": "^4.17.13",
