--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node-dir": "^0.0.34",
     "@types/pg": "^8.6.1",
     "bcrypt": "^5.0.1",
@@ -21,6 +22,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-dir": "^0.1.17",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
