--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
 //    "esModuleInterop": true,
     "allowJs": true,
-//    "sourceMap": true,
+    "sourceMap": true,
     "strict": true,
     "outDir": "./dist",
 //    "sourceRoot": "./App",
