--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/multer": "^1.4.7",
     "@types/node-dir": "^0.0.34",
     "@types/pg": "^8.6.4",
+    "@types/ws": "^8.5.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -27,7 +28,8 @@
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.5.0",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.4",
