--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
+    "@ricdotnet/logger": "^0.0.3",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
